# v-c-agentd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  meson.build  meson_options.txt
include/agentd/: authservice.h  bitcap.h  bootstrap_config.h  canonizationservice.h  command.h  commandline.h  config.h  consensusservice.h  control.h  dataservice.h  fds.h  inet.h  ipc.h  listenservice.h  modelcheck.h  path.h  privsep.h  process.h  protocolservice.h  randomservice.h  services.h  status_codes.h  string.h  supervisor.h
models/: dataservice_database_open.mk  dataservice_database_open_main.c  dataservice_decode_and_dispatch_write_status.mk  dataservice_decode_and_dispatch_write_status_main.c  dataservice_decode_request_block_id_by_height_read.mk  dataservice_decode_request_block_id_by_height_read_main.c  dataservice_decode_request_block_id_latest_read.mk  dataservice_decode_request_block_id_latest_read_main.c  dataservice_decode_request_block_make.mk  dataservice_decode_request_block_make_main.c  dataservice_decode_request_block_read.mk  dataservice_decode_request_block_read_main.c  dataservice_decode_request_canonized_transaction_get.mk  dataservice_decode_request_canonized_transaction_get_main.c  dataservice_decode_request_child_context_close.mk  dataservice_decode_request_child_context_close_main.c  dataservice_decode_request_child_context_create.mk  dataservice_decode_request_child_context_create_main.c  dataservice_decode_request_global_setting_get.mk  dataservice_decode_request_global_setting_get_main.c  dataservice_decode_request_global_setting_set.mk  dataservice_decode_request_global_setting_set_main.c  dataservice_decode_request_payload_artifact_read.mk  dataservice_decode_request_payload_artifact_read_main.c  dataservice_decode_request_transaction_drop.mk  dataservice_decode_request_transaction_drop_main.c  dataservice_decode_request_transaction_get.mk  dataservice_decode_request_transaction_get_first.mk  dataservice_decode_request_transaction_get_first_main.c  dataservice_decode_request_transaction_get_main.c  dataservice_decode_request_transaction_promote.mk  dataservice_decode_request_transaction_promote_main.c  dataservice_decode_request_transaction_submit.mk  dataservice_decode_request_transaction_submit_main.c  dataservice_decode_response_artifact_get.mk  dataservice_decode_response_artifact_get_main.c  dataservice_decode_response_block_get.mk  dataservice_decode_response_block_get_main.c  dataservice_decode_response_block_id_by_height_get.mk  dataservice_decode_response_block_id_by_height_get_main.c  (+80 more)
scripts/: model-check.sh  package.sh
share/: default-agentd.conf
src/agentd/: main.c  stub.c
src/authservice/: auth_service_api_recvresp_initialize.c  auth_service_api_recvresp_initialize_block.c  auth_service_api_sendreq_initialize.c  auth_service_api_sendreq_initialize_block.c  auth_service_decode_and_dispatch.c  auth_service_decode_and_dispatch_initialize.c  auth_service_decode_and_dispatch_write_status.c  auth_service_event_loop.c  auth_service_exit_event_loop.c  auth_service_instance_init.c  auth_service_ipc_read.c  auth_service_ipc_write.c  auth_service_private.h  auth_service_proc.c
src/bootstrap_config/: bootstrap_config_init.c  (+7 more)
subprojects/: vcblockchain.wrap
test/: CMakeLists.txt  directory_test_helper.cpp  directory_test_helper.h  testmain.cpp
test/authservice/: test_auth_service_isolation.cpp  test_auth_service_isolation.h  test_auth_service_isolation_helpers.cpp
test/bitcap/: test_bitcap.cpp
test/bootstrap_config/: test_bootstrap_config.cpp
test/canonization/: test_canonizationservice_helpers.cpp  test_canonizationservice_isolation.cpp  test_canonizationservice_isolation.h
test/commandline/: test_parse_commandline_options.cpp
test/config/: test_config.cpp  test_config_set_defaults.cpp
test/consensus/: test_consensusservice_helpers.cpp  test_consensusservice_isolation.cpp  test_consensusservice_isolation.h
test/dataservice/: test_dataservice.cpp  test_dataservice.h  test_dataservice_decode.cpp  test_dataservice_helpers.cpp  test_dataservice_isolation.cpp  test_dataservice_isolation.h  test_dataservice_isolation_helpers.cpp  test_mock_dataservice.cpp  test_mock_dataservice.h  test_mock_dataservice_helpers.cpp
test/ipc/: test_ipc.cpp  test_ipc.h  test_ipc_helpers.cpp
test/mocks/: dataservice.cpp  dataservice.h
test/path/: test_path_append_default.cpp  test_path_dirname.cpp  test_path_resolve.cpp
test/protocolservice/: test_unauthorized_protocol_service_isolation.cpp  test_unauthorized_protocol_service_isolation.h  test_unauthorized_protocol_service_isolation_helpers.cpp
test/randomservice/: test_random_service_isolation.cpp  test_random_service_isolation.h  test_random_service_isolation_helpers.cpp
test/status_codes/: test_status_codes.cpp
test/string/: test_strcatv.cpp
(+480 files in other folders)
